Bust style cache

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Atomizer Web</title>
         <meta content='Web app to generate Atomic CSS for your markup' name='description'>
-        <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
+        <link rel="stylesheet" href="style.css?v=2.0" media="screen" title="no title" charset="utf-8">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.12.0/codemirror.min.css" media="screen" title="no title" charset="utf-8">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.12.0/codemirror.min.js" charset="utf-8"></script>
 
